test_suite/tests/ui/borrow/struct_variant.stderr
error: #[serde(borrow)] may only be used on newtype variants
 --> tests/ui/borrow/struct_variant.rs:8:5
  |
8 | /     #[serde(borrow)]
9 | |     S { s: Str<'a> },
  | |____________________^
